After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709549 - Fix panel properties, size changing, expanding, unexpanding
Fix panel properties, size changing, expanding, unexpanding
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
: 577767 704622 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-10-07 09:38 UTC by Alberts Muktupāvels
Modified: 2014-01-12 15:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
panel: fix check_resize function (2.04 KB, patch)
2013-10-07 09:38 UTC, Alberts Muktupāvels
none Details | Review

Description Alberts Muktupāvels 2013-10-07 09:38:52 UTC
Created attachment 256606 [details] [review]
panel: fix check_resize function

* If panel height is set to 19px, when it starts it does not work. 
* Changing size does not update panel size. New size will be used only next time when panel starts.

Seems these problems are because of panel_toplevel_check_resize function. It is calling size_allocate only when panel width and height is NOT changed.

So if panel height is set to 19px. We get preferred height bigger than current allocation. That means size_allocate is not called. Nothing is updated.

When changing panel height in properties, it does not update too, because of same reason. size_allocate wont be called.

When changing panel from top to left, again size_allocate is not called, nothing changes!

My patch fix these problems and also fix this bug too - https://bugzilla.gnome.org/show_bug.cgi?id=577767
Comment 1 Alberts Muktupāvels 2013-10-13 18:19:22 UTC
Attached patch fix this bug too:
https://bugzilla.gnome.org/show_bug.cgi?id=704622
Comment 2 Philipp 2013-10-24 19:10:48 UTC
*** Bug 704622 has been marked as a duplicate of this bug. ***
Comment 3 Philipp 2013-10-24 19:10:56 UTC
*** Bug 577767 has been marked as a duplicate of this bug. ***